--- a/talkie_talkie_app/.env.example
+++ b/talkie_talkie_app/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:wyn0xx5bTBW5XjchM0vMTyMugJIQyXN9VaQIghE6T3A=
+APP_KEY=
 APP_DEBUG=false
 APP_URL=http://localhost
 
